Fixed alignment of history list titles

--- a/src/components/edit/Edit.scss
+++ b/src/components/edit/Edit.scss
@@ -12,7 +12,7 @@
 
   .edit-history-list {
     padding: 0.5%;
-    width: 100%;
+    width: 95%;
     display: flex;
     justify-content: space-between;
     text-align: center;
@@ -25,36 +25,3 @@
     }
   }
 }
-
-// white-space: nowrap;
-
-// .edit-input {
-//   display: inline-block;
-//   padding: 10px 15px;
-//   border-radius: 0;
-//   width: 70%;
-//   -webkit-appearance: none;
-//   border: 1px solid black;
-//   border-top-left-radius: 0.5rem;
-//   border-bottom-left-radius: 0.5rem;
-//   outline: none;
-// }
-
-// .edit-button {
-//   display: inline-block;
-//   padding: 10px 15px;
-//   border-radius: 0;
-//   -webkit-appearance: none;
-//   border: 1px solid black;
-//   border-left: none;
-//   border-top-right-radius: 0.5rem;
-//   border-bottom-right-radius: 0.5rem;
-//   outline: none;
-//   background-color: #24a0ed;
-//   color: white;
-//   font-weight: 700;
-
-//   &:hover {
-//     cursor: pointer;
-//   }
-// }
